[BUGS-419] Remove `overflow-y: scroll` from `App/styles.scss`

--- a/src/containers/App/styles.scss
+++ b/src/containers/App/styles.scss
@@ -9,7 +9,6 @@ body, .app {
   font-family: $brandFont;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
 }
 
 .viewContent {
